tests/k8s_testcases/example_policies/testcase4/testcase4-networkpolicy2.yaml
### Second network policy
### Allows traffic into default from (all pods in) the vendor-system namespace

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traffic-from-external-namespace
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress: 
    - from:
      - namespaceSelector:
          matchLabels:
            unique-label: vendor-systemNameSpace
